# OOP-lab7

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: arena.h  combat_visitor.h  console_observer.h  dragon.h  druid.h  elf.h  factory.h  file_observer.h  npc.h  observer.h  visitor.h
src/: arena.cpp  combat_visitor.cpp  dragon.cpp  druid.cpp  elf.cpp  factory.cpp  npc.cpp
tests/: test_battle.cpp  test_threads.cpp
